--- a/Feedback/templates/report.html
+++ b/Feedback/templates/report.html
@@ -143,7 +143,7 @@
         <tr class="hover:bg-gray-50 transition">
           <td class="p-3 border">{{ perf.created_at|date:"Y-m-d" }}</td>
           <td class="p-3 border">{{ perf.batch.batch_code }}</td>
-          <td class="p-3 border">{{ perf.teacher.teacher_name }}</td>
+          <td class="p-3 border">{{ perf.subject.teacher.teacher_name }}</td>
           <td class="p-3 border">{{ perf.subject.subject_name }}</td>
           <td class="p-3 border">
             <div class="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
