--- a/Feedback/templates/report.html
+++ b/Feedback/templates/report.html
@@ -151,7 +151,7 @@
       <tbody class="text-sm">
         {% for perf in performances %}
         <tr class="hover:bg-gray-50 transition">
-          <td class="p-3 border">{{ perf.created_at|date:"Y-m-d" }}</td>
+          <td class="p-3 border">{{ perf.batch.date|date:"Y-m-d" }}</td>
           <td class="p-3 border">{{ perf.batch.batch_code }}</td>
           <td class="p-3 border">{{ perf.subject.teacher.teacher_name }}</td>
           <td class="p-3 border">{{ perf.subject.subject_name }}</td>
